# alawein

./: .bundlesizerc.json  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.jsonc  .prettierrc  .secrets.baseline  .tsbuildinfo  .vale.ini  AGENTS.md  API_KEYS_SETUP.md  ARCHITECTURE.md  AUTONOMOUS-COMPLETION-SUMMARY.md  AUTONOMOUS-SUCCESS-DEMONSTRATION.md  BLACKBOX-CONSOLIDATION-EXECUTIVE-SUMMARY.md  BLACKBOX-CONSOLIDATION-FINAL-CERTIFICATE.md  BLACKBOX-CONSOLIDATION-MASTER-INDEX.md  BLACKBOX-DEMONSTRATION-COMPLETE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLIDATION-COMPLETION-CERTIFICATE.md  CONSOLIDATION-INDEX.md  CONSOLIDATION-MASTER-INDEX.md  CONSOLIDATION-PROJECT-COMPLETE.md  CONSOLIDATION-ROADMAP-FUTURE-PHASES.md  CONSOLIDATION-VERIFICATION.md  CONTRIBUTING-backup-20250807.md  CONTRIBUTING.md  DEVELOPMENT-ROADMAP.md  DOCUMENTATION_PHILOSOPHY.md  DOCUMENTATION_QA_PLAN.md  Dockerfile  FOLDER-REVISION-PLAN.md  GLOBAL-MARKET-DOMINANCE-ACHIEVED.md  GOVERNANCE.md  HANDOFF-READY.md  HackerRank.ipynb  (+51 more)
archive/consolidation/spincirc-consolidation/original-src/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  build-docker.sh  docker-compose.yaml  mypy.ini  pyproject.toml  repo-help  repo-review  repo-save  repo-stage-all  repo-start  ruff.toml  setup.py
archive/consolidation/spincirc-consolidation/original-src/config/: README.md
archive/consolidation/spincirc-consolidation/original-src/docker/: README.md
archive/consolidation/spincirc-consolidation/original-src/docs/: conf.py  getting_started.rst  index.rst  installation.rst
archive/consolidation/spincirc-consolidation/original-src/examples/: quick_start.m
archive/consolidation/spincirc-consolidation/original-src/python/: requirements.txt
archive/consolidation/spincirc-consolidation/original-src/scripts/: README.md
organizations/alawein-technologies-llc/research/talai/PEDs-Playbook/: README.md  duplicate-report.txt  duplicate-resolutions.txt  pyproject.toml
organizations/alawein-technologies-llc/research/talai/atlas-autonomous-research/: ATLAS_ARCHITECTURE.md  COMPREHENSIVE_ACTION_PLAN.md  CYCLES_27-41_FINAL_REPORT.md  DEVELOPER_GUIDE.md  INTEGRATION_GUIDE.md  MASTER_EXECUTION_PLAN.md  Makefile  PILOT_EXECUTION_PLAN.md  QUICK_START_GUIDE.md  README.md  pyproject.toml  pytest.ini
organizations/alawein-technologies-llc/research/talai/atlas-orchestrator/: README.md  pyproject.toml
organizations/alawein-technologies-llc/research/talai/grant-writer/: README.md  pyproject.toml
research/optilibria/: README.md  __init__.py  pyproject.toml
research/optilibria/optilibria/: __init__.py
research/optilibria/optilibria/applications/: __init__.py  chemistry.py  cryptography.py  finance.py  sensing.py
research/optilibria/optilibria/classical/: gradient_descent.py
research/optilibria/optilibria/core/: __init__.py  hybrid.py
research/optilibria/optilibria/distributed/: __init__.py  cluster.py
research/optilibria/optilibria/materials/: superconductor.py
research/optilibria/optilibria/physics/: __init__.py  validation.py
research/optilibria/optilibria/quantum/: __init__.py  adiabatic.py  advanced_optimizers.py  backends.py  circuit_visualization.py  distributed.py  error_mitigation.py  fault_tolerant.py  gates.py  grover.py  noise_models.py  qaoa.py  qpe.py  quantum_ml.py  simulator.py  tensor_networks.py  variational.py  vqe.py
research/qubeml/: README.md  pyproject.toml
research/qubeml/qubeml/models/: __init__.py  quantum_transformer.py
research/qubeml/src/: __init__.py  quantum_utils.py
research/qubeml/src/materials/: superconductor_predictor.py
research/qubeml/src/physics/: conservation_layer.py
research/qubeml/src/quantum/: quantum_neural_network.py
templates/python-package/: pyproject.toml
templates/python-package/src/: __init__.py  core.py
templates/python-package/tests/: test_core.py
tools/automation/: debt_cli.py  multi_agent_debate_demo.py  pyproject.toml  remediation_plan_cli.md  workflow-engine.ts
tools/automation/__tests__/: unified-types.test.ts
tools/automation/deployment/: DEPLOYMENT_GUIDE.md  __init__.py  knowledge_base.py
tools/automation/deployment/templates/: github-actions.yaml
tools/automation/prompts/project/: GATING_APPROVAL_SUPERPROMPT.md  SCI_COMP_SUPERPROMPT.md  SECURITY_CYBERSECURITY_SUPERPROMPT.md
tools/automation/prompts/system/: context-engineering.md  router.md
tools/automation/prompts/tasks/: CRAZY_IDEAS_MASTER_PROMPT.md  PROMPT_Librex.QAP.md  agentic-code-review.md  multi-hop-rag-processing.md
tools/automation/python/: cli.py  debt_gate.py  executor.py  parallel_executor.py  remediation_plan_generator.py  utils.py  validation.py  workflow_types.py
tools/automation/python/agents/devops/: __init__.py  executor.py  types.py
tools/automation/python/deployment/: cli.py  portfolio.py  registry.yaml  web_generator.py
tools/automation/python/deployment/templates/: kubernetes.yaml  pypi-publish.yaml  python-ci.yaml  vercel.json
tools/automation/python/orchestration/: codebase_orchestrator.py
tools/automation/python/orchestration/crews/: fullstack_crew.yaml
tools/automation/python/prompts/project/: AI_ML_INTEGRATION_SUPERPROMPT.md  GOVERNANCE_COMPLIANCE_SUPERPROMPT.md  KILO_CONSOLIDATION_SUPERPROMPT.md  LOCAL_AI_ORCHESTRATION_SUPERPROMPT.md  LOVABLE_FULLSTACK_TEMPLATE_SYSTEM.md  MAG_LOGIC_SUPERPROMPT.md  MONOREPO_ARCHITECTURE_SUPERPROMPT.md  PROMPT_OPTIMIZATION_SUPERPROMPT.md  QMAT_SIM_SUPERPROMPT.md  QUBE_ML_SUPERPROMPT.md  (+8 more)
tools/automation/python/services/: __init__.py  build_test_coordinator.py  deployment_service.py  integration_coordinator.py
tools/automation/python/tools/: build_matrix_config.json
tools/automation/python/types/: ExecutionContext.ts  PromptConfig.ts  index.ts
tools/automation/python/workflows/: auto-refactor.ts
tools/automation/reports/: README.md  build_inventory.json  debt_scan.md
tools/automation/tools/: build_inventory.py
tools/automation/types/: DeploymentTarget.ts
tools/automation/typescript/tests/: routing.test.ts
(+4483 files in other folders)
