[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optilibria"
version = "2.0.0"
description = "Quantum-enhanced optimization framework with 31+ algorithms and hybrid quantum-classical solvers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Meshal Alawein", email = "meshal@berkeley.edu"},
]
keywords = [
    "quantum-optimization",
    "qaoa",
    "vqe", 
    "hybrid-computing",
    "scientific-computing",
    "materials-discovery",
    "gpu-acceleration",
    "quantum-algorithms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "optax>=0.1.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.45.0",
    "qiskit-algorithms>=0.2.0",
    "qiskit-aer>=0.13.0",
    "qiskit-optimization>=0.6.0",
    "cirq>=1.3.0",
    "pennylane>=0.33.0",
    "pennylane-qiskit>=0.33.0",
]
gpu = [
    "cupy-cuda12x>=12.0.0",
    "jax[cuda12_pip]>=0.4.0",
]
materials = [
    "ase>=3.22.0",
    "pymatgen>=2023.1.1",
    "matminer>=0.7.0",
]
all = [
    "qiskit>=0.45.0",
    "cirq>=1.3.0", 
    "pennylane>=0.33.0",
    "cupy-cuda12x>=12.0.0",
    "ase>=3.22.0",
    "pymatgen>=2023.1.1",
]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.10.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/alawein/optilibria"
Repository = "https://github.com/alawein/optilibria"
Documentation = "https://optilibria.readthedocs.io"

[tool.setuptools]
packages = ["optilibria"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py39']