[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-behavior"
version = "0.1.0"
description = "Emergent Behavior Monitoring - Detect and amplify beneficial emergence (Turing Challenge Feature #8)"
authors = [{name = "TalAI Turing Challenge Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
