[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turing-interrogation"
version = "0.1.0"
description = "200-Question Interrogation Framework - Systematic hypothesis stress-testing (Turing Challenge Feature #2)"
readme = "README.md"
authors = [
    {name = "Project ATLAS", email = "atlas@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["turing-challenge", "interrogation", "hypothesis-testing", "validation", "autonomous-research"]
requires-python = ">=3.9"

dependencies = [
    "atlas-orchestrator>=0.1.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
interrogate = "interrogation.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
