[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turing-self-refutation"
version = "0.1.0"
description = "Self-Refutation Protocol - AI that tries to disprove its own hypotheses (Turing Challenge Feature #1)"
readme = "README.md"
authors = [
    {name = "Project ATLAS", email = "atlas@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["turing-challenge", "self-refutation", "falsification", "hypothesis-testing", "autonomous-research"]
requires-python = ">=3.9"

dependencies = [
    "atlas-orchestrator>=0.1.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
self-refute = "self_refutation.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
